[package]
name = "quiky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "*",  features = ["runtime-actix-native-tls", "postgres"]}
actix-web = "*"
derive_more = "0.99.17"
validator = {version = "0.16.0", features = ["derive"]}
serde = "1.0.155"
dotenv = "0.15.0"
rust-argon2 = "1.0"
getrandom="*"
env_logger = "*"
chrono = "0.4.24"
jsonwebtoken = "8.3.0"
time = "0.3.20"
reqwest = {version = "0.11.15", features = ["json"]}
